<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

		<!-- TitleBar Section -->
    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <View style="@style/TitleBarSpring" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_refresh"
            android:onClick="onRefreshClick" />
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:onClick="onSearchClick" />
    </LinearLayout>

		<!-- Main panel Section -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dip">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_friends"
                style="@style/HomeButton"
                android:onClick="onFriendsClick"
                android:text="@string/btn_friends"
                android:drawableTop="@drawable/home_btn_friends"/>
            <Button android:id="@+id/home_btn_notifications"
                style="@style/HomeButton"
                android:onClick="onNotificationsClick"
                android:text="@string/btn_notifications"
                android:drawableTop="@drawable/home_btn_notifications"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_courses"
                style="@style/HomeButton"
                android:onClick="onCoursesClick"
                android:text="@string/btn_courses"
                android:drawableTop="@drawable/home_btn_files"/>
            <Button android:id="@+id/home_btn_subscribed"
                style="@style/HomeButton"
                android:onClick="onSubscribedClick"
                android:text="@string/btn_subscribed"
                android:drawableTop="@drawable/home_btn_subscribed"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
