<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:onClick="onSearchClick" />
    </LinearLayout>

    <ExpandableListView
    	android:id="@android:id/list"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:padding="5dip" />
		
		<TextView android:id="@id/android:empty"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/no_friends"
			android:padding="10dip" />	    
    	
</LinearLayout>
