<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <View style="@style/TitleBarSpring" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="6dip">
        <EditText
        	android:id="@+id/input_name"
        	android:hint="Name"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="text"
        />
        <EditText
        	android:id="@+id/input_username"
        	android:hint="Username"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="text" />
        <EditText
        	android:id="@+id/input_password"
        	android:hint="Password"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="textPassword" />
        <EditText
        	android:id="@+id/input_password2"
        	android:hint="Confirm Password"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="textPassword" />
        <EditText
        	android:id="@+id/input_email"
        	android:hint="Email"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="textEmailAddress" />
				        	
        <!-- Login and Clear button -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
            	android:orientation="horizontal"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_centerHorizontal="true">
	            <Button android:id="@+id/btn_submit"
	              android:onClick="onSubmitClick"
	              android:text="@string/btn_submit"
	              android:layout_width="100dip"
	              android:layout_height="wrap_content" />
	            <Button android:id="@+id/btn_clear"
	              android:onClick="onClearClick"
	              android:text="@string/btn_clear"
	              android:layout_width="100dip"
	              android:layout_height="wrap_content"
	              android:paddingLeft="15dip" />
            </LinearLayout>  
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
